--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,11 @@
     ],
     "routes": [
       {
-        "src": "./",
+        "src": "/",
+        "dest": "FrontEnd/AllEvents.html"
+      },
+      {
+        "src": "/(.*)",
         "dest": "FrontEnd/AllEvents.html"
       }
     ]
