--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -7,7 +7,7 @@
     {
       "status": 404,
       "src": "^(?!/api).*$",
-      "dest": "/404.html"
+      "dest": "/AllEvents.html"
     }
   ],
   "crons": []
