--- a/Backend/config.env
+++ b/Backend/config.env
@@ -1,6 +1,6 @@
 DATABASE_LOCAL=mongodb+srv://tridib:11042004@cluster0.5upjk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
-NODE_ENV=development
+NODE_ENV=production
 
 JWT_SECRET=kickIt
 
