--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.3",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
@@ -21,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.22",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
     "socket.io": "^4.8.1",
     "validator": "^13.12.0"
   }
