--- a/.vercel/vercel.json
+++ b/.vercel/vercel.json
@@ -7,8 +7,8 @@
     ],
     "routes": [
       {
-        "src": "src",
-        "dest": "./About.html"
+        "src": "./src",
+        "dest": "About.html"
       },
       {
         "src": "/(.*)",
