--- a/.vercel/vercel.json
+++ b/.vercel/vercel.json
@@ -12,7 +12,7 @@
       },
       {
         "src": "/(.*)",
-        "dest": "./About.html"
+        "dest": "./AllEvents.html"
       }
     ]
   }
