--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -6,7 +6,7 @@
     },
     {
       "status": 404,
-      "src": "src/(.*)",
+      "src": "/src/(.*)",
       "dest": "AllEvents.html"
     }
   ],
