--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -4,6 +4,10 @@
     {
       "handle": "error"
     },
+     {
+      "src": "/",
+      "dest": "/static/src/AllEvents.html"
+    },
     {
       "status": 404,
       "src": "^(?!/api).*$",
