--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -7,8 +7,12 @@
     {
       "src": "/",
       "dest": "/src/About.html"
+    },
+    {
+      "status": 404,
+      "src": "^(?!/api).*$",
+      "dest": "/About.html"
     }
-   
   ],
   "crons": []
 }
