--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -6,12 +6,12 @@
     },
     {
       "src": "/",
-      "dest": "/src/About.html"
+      "dest": "/static/src/About.html"
     },
     {
       "status": 404,
       "src": "^(?!/api).*$",
-      "dest": "/About.html"
+      "dest": "/static/src/About.html"
     }
   ],
   "crons": []
