--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -1,8 +1,11 @@
 {
   "version": 3,
   "routes": [
-   
     {
+      "handle": "error"
+    },
+    {
+      "status":200,
       "src": "/",
       "dest": "/src/About.html"
     },
