--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -6,8 +6,8 @@
     },
     {
       "status":200,
-      "src": "/",
-      "dest": "/src/About.html"
+     "src": "^/([\\w\\-./]+\\.(css|js|png|jpg|jpeg|gif|svg|ico))$",
+      "dest": "/src/AllEvents.html"
     },
     {
       "status": 404,
