--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -5,13 +5,9 @@
       "handle": "error"
     },
     {
-      "src": "^/([\\w\\-./]+\\.(css|js|png|jpg|jpeg|gif|svg|ico))$",
-      "dest": "/static/src/$1"
-    },
-    {
       "status":200,
-      "src": "^/$",
-      "dest": "/static/src/About.html"
+      "src": "^/([\\w\\-./]+\\.(css|js|png|jpg|jpeg|gif|svg|ico))$",
+      "dest": "stat/src/About.html"
     },
     {
       "status": 404,
