--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -5,17 +5,14 @@
       "handle": "error"
     },
     {
-      "src": "^/([\\w\\-./]+\\.(css|js|png|jpg|jpeg|gif|svg|ico))$",
-      "dest": "/static/src/$1"
-    },
-    {
+      "status":200,
       "src": "/",
-      "dest": "/static/src/About.html"
+      "dest": "/src/About.html"
     },
     {
       "status": 404,
       "src": "^(?!/api).*$",
-      "dest": "/static/src/About.html"
+      "dest": "/About.html"
     }
   ],
   "crons": []
