--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -5,6 +5,11 @@
       "handle": "error"
     },
     {
+      "status":404,
+      "src": "^/([\\w\\-./]+\\.(css|js|png|jpg|jpeg|gif|svg|ico|html))$",
+      "dest": "/static/src/$1"
+    },
+    {
       "status":200,
       "src": "/",
       "dest": "/src/About.html"
