tailwind-login-page2

--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -4,12 +4,12 @@
     { "handle": "filesystem" },
     {
       "src": "^/$",
-      "dest": "/static/src/About.html"
+      "dest": "/About.html"
     },
     {
       "status": 404,
       "src": "^(?!/api).*$",
-      "dest": "/static/src/About.html"
+      "dest": "/About.html"
     }
   ]
 }
