--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,5 +11,8 @@
   "description": "",
   "devDependencies": {
     "tailwindcss": "^3.4.17"
+  },
+  "dependencies": {
+    "alpinejs": "^3.14.9"
   }
 }
